[package]
name = "lushui"
version = "0.1.0"
description = "The reference compiler of the Lushui programming language"
edition = "2021"
publish = false

[lib]
name = "lushui"
path = "compiler/lib.rs"

[[bin]]
name = "lushui"
path = "compiler/main.rs"

[features]
llvm = ["dep:inkwell"]

[dependencies]
bitflags = "1.3.2"
clap = "3.1.5"
colored = "2.0.0"
crossbeam = "0.8.1"
derivation = { path = "project/libraries/derivation" }
difference = "2.0.0"
html-escape = "0.2.9"
index_map = { path = "project/libraries/index_map" }
joinery = "2.1.0"
minifier = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.14"
open = "3.0.1"
rustc-hash = "1.1.0"
smallvec = { version = "1.8.0", features = ["const_generics"] }
string_cache = { version = "0.8.3", default-features = false }
strsim = "0.10.0"
tokio = { version = "1.19.2", features = ["io-std", "rt-multi-thread"] }
tower-lsp = "0.17.0"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
urlencoding = "2.1.0"
cranelift = "0.85.1"
cranelift-object = "0.85.1"
cranelift-module = "0.85.1"
cranelift-native = "0.85.1"
target-lexicon = "0.12.4"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
rev = "25b9fc5"
features = ["llvm13-0"]
optional = true
