[package]
name = "lushui_ast"
version = "0.0.0"
description = "The abstract syntax tree (AST) for Lushui source code"
edition = "2021"
publish = false

[dependencies]
colored = "2.0.0"
index_map = { path = "../../project/libraries/index_map" }
joinery = "2.1.0"
lushui_diagnostics = { path = "../diagnostics" }
lushui_error = { path = "../error" }
lushui_item = { path = "../item" }
lushui_span = { path = "../span" }
lushui_utilities = { path = "../utilities" }
smallvec = { version = "1.8.0", features = ["const_generics"] }
lushui_token = { path = "../token" }
# @Question good idea? (for `is_punctuation`)
# lushui_lexer = { path = "../lexer" }
