[package]
name = "codegen_cranelift"
version = "0.0.0"
description = "The Cranelift backend generating CLIF"
edition = "2021"
publish = false

[dependencies]
cranelift = "0.93.1"
cranelift-module = "0.93.1"
cranelift-native = "0.93.1"
cranelift-object = "0.93.1"
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
session = { path = "../session" }
utilities = { path = "../utilities" }
