[package]
name = "codegen_cranelift"
version = "0.0.0"
description = "The Cranelift backend generating CLIF"
edition = "2024"
publish = false

[dependencies]
cranelift = "0.97.1"
cranelift-module = "0.97.1"
cranelift-native = "0.97.1"
cranelift-object = "0.97.1"
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
session = { path = "../session" }
utility = { path = "../utility" }
