[package]
name = "codegen_llvm"
version = "0.0.0"
description = "The LLVM backend generating LLVM-IR"
edition = "2021"
publish = false

[dependencies]
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir_format = { path = "../hir_format" }
session = { path = "../session" }
utilities = { path = "../utilities" }

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
rev = "aa370b54629b276f9d78802674eff494c96c8e50"
features = ["llvm15-0"]
