[package]
name = "codegen_llvm"
version = "0.0.0"
description = "The LLVM backend generating LLVM-IR"
edition = "2024"
publish = false

[dependencies]
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir_format = { path = "../hir_format" }
session = { path = "../session" }
utility = { path = "../utility" }
llvm-sys = { version = "170", features = ["prefer-static"] }

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
rev = "5c9f7fcbb0a667f7391b94beb65f1a670ad13221"
features = ["llvm17-0"]
