[package]
name = "diagnostics"
version = "0.0.0"
description = "The diagnostic system"
edition = "2021"
publish = false

[dependencies]
colored = "2.0.0"
derivation = { path = "../../project/library/derivation" }
span = { path = "../span" }
unicode-width = "0.1.10"
utilities = { path = "../utilities" }
