[package]
name = "documenter"
version = "0.0.0"
description = "The documentation generator"
edition = "2024"
publish = false

[dependencies]
crossbeam = "0.8.2"
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir_format = { path = "../hir_format" }
html-escape = "0.2.13"
joinery.workspace = true
lexer = { path = "../lexer" }
minifier = "0.3.5"
resolver = { path = "../resolver" }
session = { path = "../session" }
span = { path = "../span" }
syntax = { path = "../syntax" }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
utility = { path = "../utility" }
