[package]
name = "driver"
version = "0.0.0"
description = "The entry point of the compiler"
edition = "2021"
publish = false

[features]
llvm = ["dep:codegen_llvm"]
cranelift = ["dep:codegen_cranelift"]
lsp = ["dep:server", "dep:tokio"]

[dependencies]
ast = { path = "../ast" }
clap = { version = "4.1.8", features = ["deprecated", "string"] }
codegen_cranelift = { path = "../codegen_cranelift", optional = true }
codegen_llvm = { path = "../codegen_llvm", optional = true }
colored = "2.0.0"
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
documenter = { path = "../documenter" }
hir_format = { path = "../hir_format" }
index_map = { path = "../../project/library/index_map" }
lexer = { path = "../lexer" }
lowered_ast = { path = "../lowered_ast" }
lowerer = { path = "../lowerer" }
metadata = { path = "../metadata" }
open = "3.4.0"
package = { path = "../package" }
resolver = { path = "../resolver" }
server = { path = "../server", optional = true }
session = { path = "../session" }
span = { path = "../span" }
syntax = { path = "../syntax" }
token = { path = "../token" }
typer = { path = "../typer" }
utilities = { path = "../utilities" }

[dependencies.tokio]
version = "1.26.0"
features = ["io-std", "rt-multi-thread"]
optional = true
