[package]
name = "driver"
version = "0.0.0"
description = "The entry point of the compiler"
edition = "2021"
publish = false

[features]
llvm = ["dep:codegen_llvm"]
cranelift = ["dep:codegen_cranelift"]
lsp = ["dep:server", "dep:tokio"]

[dependencies]
ast = { path = "../ast" }
clap = { version = "4.3.8", features = ["deprecated", "string"] }
codegen_cranelift = { path = "../codegen_cranelift", optional = true }
codegen_llvm = { path = "../codegen_llvm", optional = true }
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
documenter = { path = "../documenter" }
hir_format = { path = "../hir_format" }
lexer = { path = "../lexer" }
lo_ast = { path = "../lo_ast" }
lowerer = { path = "../lowerer" }
open = "5.0.0"
package = { path = "../package" }
recnot = { path = "../../project/library/recnot" }
resolver = { path = "../resolver" }
server = { path = "../server", optional = true }
session = { path = "../session" }
span = { path = "../span" }
syntax = { path = "../syntax" }
typer = { path = "../typer" }
utility = { path = "../utility" }

[dependencies.tokio]
version = "1.28.2"
features = ["io-std", "rt-multi-thread"]
optional = true
