[package]
name = "hir"
version = "0.0.0"
description = "The Lushui high-level intermediate representation (HIR)"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
derivation = { path = "../../project/library/derivation" }
error = { path = "../error" }
index_map = { path = "../../project/library/index_map" }
joinery = "2.1.0"
lowered_ast = { path = "../lowered_ast" }
num-traits = "0.2.14"
span = { path = "../span" }
utilities = { path = "../utilities" }
