[package]
name = "hir"
version = "0.0.0"
description = "The Lushui high-level intermediate representation (HIR)"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
index_map = { path = "../../project/library/index_map" }
joinery = "3.1.0"
lowered_ast = { path = "../lowered_ast" }
num-traits = "0.2.15"
span = { path = "../span" }
utilities = { path = "../utilities" }
