[package]
name = "hir"
version = "0.0.0"
description = "The Lushui high-level intermediate representation (HIR)"
edition = "2024"
publish = false

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
index_map = { path = "../../project/library/index_map" }
joinery.workspace = true
lo_ast = { path = "../lo_ast" }
num-traits = "0.2.19"
span = { path = "../span" }
utility = { path = "../utility" }
