[package]
name = "hir_format"
version = "0.0.0"
description = "Formatting procedures for HIR data types"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
colored = "2.0.0"
hir = { path = "../hir" }
joinery = "3.1.0"
session = { path = "../session" }
token = { path = "../token" }

[dev-dependencies]
session = { path = "../session", features = ["test"] }
span = { path = "../span" }
utilities = { path = "../utilities" }
