[package]
name = "hir_format"
version = "0.0.0"
description = "Formatting procedures for HIR data types"
edition = "2024"
publish = false

[dependencies]
ast = { path = "../ast" }
hir = { path = "../hir" }
joinery = "3.1.0"
lexer = { path = "../lexer" }
session = { path = "../session" }
utility = { path = "../utility" }

[dev-dependencies]
session = { path = "../session", features = ["test"] }
span = { path = "../span" }
