[package]
name = "lushui_lexer"
version = "0.0.0"
description = "The lexical analyzer (lexer) of Lushui"
edition = "2021"
publish = false

[dependencies]
derivation = { path = "../../project/libraries/derivation" }
lushui_diagnostics = { path = "../diagnostics" }
lushui_error = { path = "../error" }
lushui_span = { path = "../span" }
lushui_lexer_utilities = { path = "../lexer_utilities" }
lushui_utilities = { path = "../utilities" }
lushui_token = { path = "../token" }
# @Beacon @Task get rid of this dep
lushui_session = { path = "../session" }
