[package]
name = "lexer"
version = "0.0.0"
description = "The lexical analyzer (lexer)"
edition = "2021"
publish = false

[dependencies]
diagnostics = { path = "../diagnostics" }
error = { path = "../error" }
span = { path = "../span" }
token = { path = "../token" }
utilities = { path = "../utilities" }
