[package]
name = "lo_ast"
version = "0.0.0"
description = "The Lushui lowered abstract syntax tree (Lo-AST)"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
bitflags = "2.3.2"
colored = "2.0.0"
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
span = { path = "../span" }
utility = { path = "../utility" }
