[package]
name = "lowered_ast"
version = "0.0.0"
description = "The Lushui lowered abstract syntax tree (AST)"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
bitflags = "1.3.2"
colored = "2.0.0"
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
span = { path = "../span" }
token = { path = "../token" }
utilities = { path = "../utilities" }
