[package]
name = "lowerer"
version = "0.0.0"
description = "The AST lowerer"
edition = "2024"
publish = false

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
lo_ast = { path = "../lo_ast" }
session = { path = "../session" }
span = { path = "../span" }
syntax = { path = "../syntax" }
utility = { path = "../utility" }
