[package]
name = "lushui_metadata"
version = "0.0.0"
# @Task description
edition = "2021"
publish = false

[dependencies]
derivation = { path = "../../project/libraries/derivation" }
lushui_diagnostics = { path = "../diagnostics" }
lushui_span = { path = "../span" }
lushui_error = { path = "../error" }
lushui_utilities = { path = "../utilities" }
lushui_lexer_utilities = { path = "../lexer_utilities" }
