[package]
name = "lushui_package"
version = "0.0.0"
# @Task description
edition = "2021"
publish = false

[dependencies]
derivation = { path = "../../project/libraries/derivation" }
index_map = { path = "../../project/libraries/index_map" }
lushui_component_index = { path = "../component_index" }
lushui_diagnostics = { path = "../diagnostics" }
lushui_error = { path = "../error" }
lushui_lexer = { path = "../lexer" }
lushui_metadata = { path = "../metadata" }
lushui_session = { path = "../session" }
lushui_span = { path = "../span" }
lushui_token = { path = "../token" }
lushui_utilities = { path = "../utilities" }
smallvec = { version = "1.8.0", features = ["const_generics"] }
