[package]
name = "package"
version = "0.0.0"
description = "The package and component resolver"
edition = "2021"
publish = false

[dependencies]
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
error = { path = "../error" }
index_map = { path = "../../project/library/index_map" }
lexer = { path = "../lexer" }
metadata = { path = "../metadata" }
session = { path = "../session" }
smallvec = { version = "1.8.0", features = ["const_generics"] }
span = { path = "../span" }
token = { path = "../token" }
utilities = { path = "../utilities" }
