[package]
name = "package"
version = "0.0.0"
description = "The package and component resolver"
edition = "2021"
publish = false

[dependencies]
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
index_map = { path = "../../project/library/index_map" }
lexer = { path = "../lexer" }
metadata = { path = "../metadata" }
session = { path = "../session" }
span = { path = "../span" }
utilities = { path = "../utilities" }
