[package]
name = "parser"
version = "0.0.0"
description = "The syntactic analyzer (parser)"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
error = { path = "../error" }
lexer = { path = "../lexer" }
span = { path = "../span" }
token = { path = "../token" }
utilities = { path = "../utilities" }

[dev-dependencies]
colored = "2.0.0"
difference = "2.0.0"
index_map = { path = "../../project/library/index_map" }
smallvec = { version = "1.8.0", features = ["const_generics"] }
