[package]
name = "parser"
version = "0.0.0"
description = "The syntactic analyzer (parser)"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
span = { path = "../span" }
utility = { path = "../utility" }

[dev-dependencies]
index_map = { path = "../../project/library/index_map" }
