[package]
name = "lushui_resolver"
version = "0.0.0"
# @Task description
edition = "2021"
publish = false

[dependencies]
colored = "2.0.0"
difference = "2.0.0"
# joinery = "2.1.0"
lushui_ast = { path = "../ast" }
lushui_diagnostics = { path = "../diagnostics" }
lushui_entity = { path = "../entity" }
lushui_error = { path = "../error" }
lushui_hir = { path = "../hir" }
lushui_lexer = { path = "../lexer" }
lushui_lowered_ast = { path = "../lowered_ast" }
lushui_session = { path = "../session" }
lushui_span = { path = "../span" }
lushui_token = { path = "../token" }
lushui_utilities = { path = "../utilities" }
smallvec = { version = "1.8.0", features = ["const_generics"] }
strsim = "0.10.0"
unicode-width = "0.1.9"
