[package]
name = "resolver"
version = "0.0.0"
description = "The name resolver"
edition = "2021"
publish = false

[dependencies]
ast = { path = "../ast" }
colored = "2.0.0"
diagnostics = { path = "../diagnostics" }
difference = "2.0.0"
hir = { path = "../hir" }
hir_format = { path = "../hir_format" }
lexer = { path = "../lexer" }
lo_ast = { path = "../lo_ast" }
session = { path = "../session" }
span = { path = "../span" }
strsim = "0.10.0"
unicode-width = "0.1.10"
utility = { path = "../utility" }
