[package]
name = "server"
version = "0.0.0"
description = "The LSP-based language server"
edition = "2021"
publish = false

[dependencies]
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
index_map = { path = "../../project/library/index_map" }
lowerer = { path = "../lowerer" }
package = { path = "../package" }
resolver = { path = "../resolver" }
session = { path = "../session" }
span = { path = "../span" }
syntax = { path = "../syntax" }
tokio = { version = "1.28.2", features = ["io-std", "rt-multi-thread"] }
tower-lsp = "0.19.0"
typer = { path = "../typer" }
utility = { path = "../utility" }
