[package]
name = "session"
version = "0.0.0"
edition = "2021"
publish = false

[features]
test = []

[dependencies]
ast = { path = "../ast" }
derivation = { path = "../../project/library/derivation" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
index_map = { path = "../../project/library/index_map" }
internment = "0.7.0"
lexer = { path = "../lexer" }
span = { path = "../span" }
utilities = { path = "../utilities" }
