[package]
name = "lushui_span"
version = "0.0.0"
# @Task description
edition = "2021"
publish = false

[dependencies]
index_map = { path = "../../project/libraries/index_map" }
unicode-width = "0.1.9"
lushui_utilities = { path = "../utilities" }
# @Task get rid of this dependency!
lushui_component_index = { path = "../component_index" }
