[package]
name = "syntax"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
session = { path = "../session" }
span = { path = "../span" }
utility = { path = "../utility" }
