[package]
name = "typer"
version = "0.0.0"
description = "The type checker"
edition = "2021"
publish = false

[dependencies]
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir_format = { path = "../hir_format" }
joinery = "3.1.0"
resolver = { path = "../resolver" }
session = { path = "../session" }
utility = { path = "../utility" }
