[package]
name = "lushui_utilities"
version = "0.0.0"
# @Task description
edition = "2021"
publish = false

[dependencies]
colored = "2.0.0"
difference = "2.0.0"
num-bigint = "0.4.3"
rustc-hash = "1.1.0"
smallvec = { version = "1.8.0", features = ["const_generics"] }
string_cache = { version = "0.8.3", default-features = false }
