[package]
name = "utilities"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
colored = "2.0.0"
difference = "2.0.0"
index_map = { path = "../../project/library/index_map" }
num-bigint = "0.4.3"
rustc-hash = "1.1.0"
smallvec = { version = "1.10.0", features = ["const_generics"] }
string_cache = { version = "0.8.7", default-features = false }
