[package]
name = "utility"
version = "0.0.0"
edition = "2021"
publish = false

[features]
test = []

[dependencies]
difference = "2.0.0"
index_map = { path = "../../project/library/index_map" }
num-bigint = "0.4.3"
rustc-hash = "1.1.0"
smallvec = { version = "1.10.0", features = ["const_generics"] }
anstyle = "1.0.1"
supports-color = "2.0.0"
derivation = { path = "../../project/library/derivation" }
