[package]
name = "freestanding"
version = "0.1.0"
description = "Generate own struct for each enum variant."
repository = "https://github.com/fmease/freestanding"
readme = "README.md"
keywords = []
license = "MIT"
authors = ["León Orell Valerian Liehr <liehr.exchange@gmx.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.13", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
